# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  before_run.sh  default.conf  ex.conf
YoupiBanane/: index.html
YoupiBanane/Yeah/: not_happy.bad_extension
YoupiBanane/directory/: youpi.bad_extension
YoupiBanane/nop/: other.pouic  youpi.bad_extension
cgi_scripts/: igra.py  post.php  test.php  test.py
html_pages/: 400.html  404.html  405.html  500.html  index.html  styles.css
includes/: logging.hpp
srcs/: main.cpp
srcs/CGI/: CGI.cpp  CGI.hpp
srcs/Engine/: ServerEngine.cpp  ServerEngine.hpp
srcs/HTTP/: Autoindex.cpp  Autoindex.h  Request.cpp  Request.hpp  Request_data.hpp  Response.cpp  Response.hpp
srcs/HTTP/Errors/: HTTPBadRequest.cpp  HTTPBadRequest.hpp  HTTPError.cpp  HTTPError.hpp  HTTPInternalServerError.cpp  HTTPInternalServerError.hpp  HTTPNotFound.cpp  HTTPNotFound.hpp
srcs/HTTP/Responders/: AResponder.cpp  AResponder.hpp  GetResponder.cpp  GetResponder.hpp  IResponder.hpp  PostResponder.cpp  PostResponder.hpp
srcs/HTTP/Responders/Delete/: DeleteResponder.cpp  DeleteResponder.hpp
srcs/HTTP/Responders/Get/: GetResponder.cpp  GetResponder.hpp
srcs/HTTP/Responders/Post/: PostResponder.cpp  PostResponder.hpp
srcs/HTTP/Responders/Put/: PutResponder.cpp  PutResponder.hpp
srcs/Parse/: ParserConfig.cpp
srcs/Utils/: Date.cpp  Date.hpp  logging.cpp
srcs/parse_config/: LocationData.hpp  ParserConfig.cpp
srcs/server_engine/: Date.cpp  ServerEngine.cpp  ServerEngine.hpp
v3/: Makefile  error copy.html  main.cpp
v3/server_engine/: Request.cpp  Request.hpp  ServerEngine.cpp  ServerEngine.hpp  Webserv_main.hpp
v4/: CMakeLists.txt  Makefile  before_run.sh  ex.conf  main.cpp  start.html
v4/CGI/: CGI.cpp  CGI.hpp
v4/HTTP/: Request.cpp  Request.hpp  Response.cpp  Response.hpp
v4/HTTP/Responders/: GetResponder.cpp  GetResponder.hpp  IResponder.hpp
v4/html_pages/: 400.html  404.html  405.html  500.html  index.html  styles.css
v4/parse_config/: LocationData.cpp  LocationData.hpp  ParserConfig.cpp  ParserConfig.hpp  ServerData.cpp  ServerData.hpp
v4/python/: igra.py  test.php  test.py
v4/server_engine/: Colors.hpp  Date.cpp  Date.hpp  Request.cpp  Request.hpp  ServerEngine.cpp  ServerEngine.hpp
www/: 400.html  413.html  index.html  styles.css
